# nes-rs

./: Cargo.toml
docs/: instructions.csv  nes.md  newinst.tab
src/: addressing_mode.rs  bus.rs  console.rs  cpu.rs  debugger.rs  ines.rs  instructions.rs  lib.rs  mapper.rs  ppu.rs
src/mappers/: mod.rs  nrom.rs  uxrom.rs
tests/: main.rs
