[package]
authors = ["avery"]
edition = "2018"
name = "nes"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
csv = "1.1.5"
derive_more = "0.99.11"
env_logger = "0.8.2"
log = "0.4.14"

[dev-dependencies]
assert_matches = "1.5.0"
hex = "0.4.2"
